# wsgup

./: .gitignore  README.md  Vagrantfile
.github/workflows/: build.yml  linux.yml  windows.yml
c/: README.md
c/wsgup/: CMakeLists.txt  build.sh
c/wsgup/include/: main.h
c/wsgup/lib/openssl/: aesccm.c  aesccm.h
c/wsgup/src/: main.c
c/wsgup/src/cjson/: cJSON.c
c/wsgup/src/openssl/: aesccm.c
csharp/wsgup/: Program.cs  wsgup.csproj
dart/: README.md
dart/wsgup/: out.js  out.js.deps  out.js.map  pubspec.yaml
dart/wsgup/test/: wsgup_test.dart
go/wsgup/: go.mod  go.sum  main.go
java/wsgup/: settings.gradle
java/wsgup/app/: build.gradle
java/wsgup/app/src/main/java/com/github/gyk4j/wsgup/: App.java
java/wsgup/app/src/test/java/com/github/gyk4j/wsgup/: AppTest.java
java/wsgup/wsgup/: build.gradle
java/wsgup/wsgup/src/main/java/: module-info.java
js/: README.md
js/wsgup/: app.js  package-lock.json  package.json
kotlin/: README.md
kotlin/wsgup/: settings.gradle.kts
kotlin/wsgup/wsgup/: build.gradle.kts
kotlin/wsgup/wsgup/src/main/kotlin/com/github/gyk4j/wsgup/: App.kt
kotlin/wsgup/wsgup/src/test/kotlin/com/github/gyk4j/wsgup/: AppTest.kt.bak
perl/: README.md
perl/wsgup/: cpanfile  main.pl
php/: README.md
php/wsgup/: index.php  php.ini
python/: README.md
python/wsgup/: main.py
ruby/: README.md
ruby/wsgup/: Gemfile  main.rb
rust/wsgup/: Cargo.toml
rust/wsgup/src/: main.rs
shared/: README.md  main.js  register.json.tmpl  testdata.json.tmpl
swift/wsgup/: Package.resolved  Package.swift
swift/wsgup/Sources/: wsgup.swift
vb/: README.md
vb/wsgup/: Program.vb  wsgup.vbproj
